# mechanical-test-compliance-correction

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  start-gui.ps1
.github/workflows/: ci.yml
examples/: README.md  compression_90w7ni3fe.toml  tension_steel.toml
src/mechtest_correction/: __init__.py  advanced_constitutive.py  analysis.py  cli.py  correction.py  gui.py  high_rate.py  io.py  models.py  plot_registry.py  plotting.py  publication.py  wha_models.py  work_hardening.py
tests/: conftest.py  test_advanced_constitutive.py  test_cli.py  test_correction.py  test_gui.py  test_high_rate.py  test_io.py  test_publication.py  test_wha_models.py
